# practicas_python

./: LICENSE  README.md  ahorcado.py  cancion.py  caracs.py  correcion.py  criptografias.py  diccionario.py  encontrar_palabra.py  filtra_palabra.py  frases_palindromo.py  frecuencias.py  hello.py  histograma.py  inversa.py  longitud.py  max.py  max3.py  max_en_lista.py  palabras_a_len.py  palindromo.py  pertenece.py  pyproject.toml  suma.py  superposicion.py  traducir.py  vocal.py
